force-app/main/default/objects/Temporal_Bautismos__c/Temporal_Bautismos__c.object-meta.xml
<CustomObject>
    <label>Temporal Bautismos</label>
    <nameField>
        <label>Temporal Bautizo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Bautismos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>