force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_FECHA__c.field-meta.xml
<CustomField>
    <fullName>BA_FECHA__c</fullName>
    <label>BA_FECHA</label>
    <type>Date</type>
</CustomField>