force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_FECHAF__c.field-meta.xml
<CustomField>
    <fullName>BA_FECHAF__c</fullName>
    <label>BA_FECHAF</label>
    <type>Date</type>
</CustomField>