force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_FEDE__c.field-meta.xml
<CustomField>
    <fullName>BA_FEDE__c</fullName>
    <label>BA_FEDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>