force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_INVERSA__c.field-meta.xml
<CustomField>
    <fullName>BA_INVERSA__c</fullName>
    <label>BA_INVERSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>