force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_LICENC__c.field-meta.xml
<CustomField>
    <fullName>BA_LICENC__c</fullName>
    <label>BA_LICENC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>