force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>BA_LUGAR__c</fullName>
    <label>BA_LUGAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>