force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>BA_NIVEL__c</fullName>
    <label>BA_NIVEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>