force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_NUMBAU__c.field-meta.xml
<CustomField>
    <fullName>BA_NUMBAU__c</fullName>
    <label>BA_NUMBAU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>