force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_PLAZAS__c.field-meta.xml
<CustomField>
    <fullName>BA_PLAZAS__c</fullName>
    <label>BA_PLAZAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>