force-app/main/default/objects/Temporal_Bautismos__c/fields/BA_TURNO__c.field-meta.xml
<CustomField>
    <fullName>BA_TURNO__c</fullName>
    <label>BA_TURNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>